Bugfix - Credit are no longer stuck over the colors on mobile

--- a/index.css
+++ b/index.css
@@ -188,6 +188,7 @@ a {
     }
 
     #codeWriter {
+        position: fixed;
         font-size: 8px;
     }
 }
